examples/test/testpolicy323.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy323
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key48: value4
      key14: value18
      key13: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value8
          key38: value42
      podSelector:
        matchLabels:
          key39: value47
          key49: value26
